--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -617,8 +617,13 @@
     var hotelhash = document.getElementById('hotelhash').value;
     var get_latlong = document.getElementById('get_latlong').value;
     var checkout = document.getElementById('checkout').value;
-   var high = document.getElementById('high').checked;
-    var low = document.getElementById('low').checked;
+    var pricea = document.getElementById('pricea').checked;
+    var priceb = document.getElementById('priceb').checked;
+    var pricec = document.getElementById('pricec').checked;
+    var priced = document.getElementById('priced').checked;
+    var pricee = document.getElementById('pricee').checked;
+    var pricef = document.getElementById('pricef').checked;
+    var firstformtoggle = 0;
 
     var url = "/essentials/filter";
 
@@ -626,7 +631,7 @@
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,low:low,high:high}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle}
        });
  });
 
