--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -33,14 +33,14 @@
    <ul class="sidebar-nav" id ="filters">
 
 
-<%number = [['5',4],['10',9],['15',14],['25',24],['50',49]]%>
 
-<%= label_tag(:filterresults, "Number of Results") %>
-<%= select_tag(:filterresults,options_for_select(number,@filterresults))%>
 
+<%= label_tag(:prices, "Price Per Night") %>
+<div id="prices">
 
      <li><div class="checkbox">
       <label>
+
 
 <%= check_box_tag(:pricea,true,checked=@pricea)%>
 <%= label_tag(:pricea, "$0-$100") %>
@@ -90,7 +90,16 @@
     </label>
   </div></li>
 
+</div>
 
+
+
+
+
+<%= label_tag(:brandbox, "Hotel Chain") %>
+
+
+<div id="brandbox">
   <li><div class="checkbox">
     <label>
  <%= check_box_tag(:whotels,true,checked=@whotels) %>
@@ -111,6 +120,11 @@
 <%= label_tag(:waldorf, "Waldorf Astoria") %>
     </label>
   </div></li>
+</div>
+
+
+
+
 
 
 
@@ -134,6 +148,8 @@
         <div class="panel-group col-md-8 col-md-offset-2 column" id="resultsform"><a
 
           href="/">Return to Search</a>
+
+
         </div>
 
 
