--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -38,6 +38,9 @@
 <%= label_tag(:filterresults, "Number of Results") %>
 <%= select_tag(:filterresults,options_for_select(number,@filterresults))%>
 
+<div></div>
+<%= label_tag(:pricebox, "Price Per Night") %>
+<div id="pricebox">
 
      <li><div class="checkbox">
       <label>
@@ -90,6 +93,11 @@
     </label>
   </div></li>
 
+</div>
+
+
+<%= label_tag(:brandbox, "Hotel Chains") %>
+<div id="brandbox">
 
   <li><div class="checkbox">
     <label>
@@ -111,6 +119,69 @@
 <%= label_tag(:waldorf, "Waldorf Astoria") %>
     </label>
   </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:sheraton,true,checked=@sheraton) %>
+<%= label_tag(:sheraton, "Sheraton") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:westin,true,checked=@westin) %>
+<%= label_tag(:westin, "Westin") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:hilton,true,checked=@hilton) %>
+<%= label_tag(:hilton, "Hilton") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:fourseasons,true,checked=@fourseasons) %>
+<%= label_tag(:fourseasons, "Four Seasons") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:radissonblu,true,checked=@radissonblu) %>
+<%= label_tag(:radissonblu, "Radisson Blu") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:stregis,true,checked=@stregis) %>
+<%= label_tag(:stregis, "St. Regis") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:renaissance,true,checked=@renaissance) %>
+<%= label_tag(:renaissance, "Renaissance") %>
+    </label>
+  </div></li>
+
+
+
+
+
+
+</div>
 
 
 
@@ -150,7 +221,10 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
 
 
-<d1><%=@filterresults%></d1>
+
+
+
+
 <%@hotelhash = eval(@hotelhash.to_s)%>
 <%@get_latlong= eval(@get_latlong.to_s)%>
 
@@ -159,8 +233,6 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 
 
 
-
-<%=@firstformtoggle%>
 
 
 <%search_a = 0%>
@@ -529,6 +601,19 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
                                       <input value ="<%=@whotels%>" name="@whotels" id="@whotels" type="hidden">
                                       <input value ="<%=@hyatt%>" name="@hyatt" id="@hyatt" type="hidden">
                                       <input value ="<%=@waldorf%>" name="@waldorf" id="@waldorf" type="hidden">
+                                      <input value ="<%=@fourseasons%>" name="@fourseasons" id="@fourseasons" type="hidden">
+                                      <input value ="<%=@hilton%>" name="@hilton" id="@hilton" type="hidden">
+                                      <input value ="<%=@radissionblu%>" name="@radissionblu" id="@radissonblu" type="hidden">
+                                      <input value ="<%=@renaissance%>" name="@renaissance" id="@renaissance" type="hidden">
+                                      <input value ="<%=@sheraton%>" name="@sheraton" id="@sheraton" type="hidden">
+                                      <input value ="<%=@stregis%>" name="@stregis" id="@stregis" type="hidden">
+                                      <input value ="<%=@westin%>" name="@westin" id="@westin" type="hidden">
+
+
+
+
+
+
 
                                       <input value ="<%=@brandstring%>" name="@brandstring" id="@brandstring" type="hidden">
                                       <input value ="<%=@chainid%>" name="chainid" id="chainid" type="hidden">
@@ -558,6 +643,13 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
     var hyatt = document.getElementById('hyatt').checked;
     var whotels = document.getElementById('whotels').checked;
     var waldorf = document.getElementById('waldorf').checked;
+    var fourseasons = document.getElementById('fourseasons').checked;
+    var hilton = document.getElementById('hilton').checked;
+    var radissonblu = document.getElementById('radissonblu').checked;
+    var renaissance = document.getElementById('renaissance').checked;
+    var sheraton = document.getElementById('sheraton').checked;
+    var stregis = document.getElementById('stregis').checked;
+    var westin = document.getElementById('westin').checked;
 
 
 
@@ -566,6 +658,13 @@ var brandstring =[]
     if(hyatt==1) { brandstring.push('65');}
     if(whotels==1) {brandstring.push('706');}
     if(waldorf==1) {brandstring.push('2194');}
+    if(fourseasons==1) {brandstring.push('2130');}
+    if(hilton==1) {brandstring.push('2146');}
+    if(radissonblu==1) {brandstring.push('2431');}
+    if(renaissance==1) {brandstring.push('15');}
+    if(sheraton==1) {brandstring.push('130');}
+    if(stregis==1) {brandstring.push('2045');}
+    if(westin==1) {brandstring.push('152');}
 
 
     var url = "/essentials/filter";
@@ -575,7 +674,7 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin}
        });
  });
 
