--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -177,7 +177,115 @@
   </div></li>
 
 
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:boscolo,true,checked=@boscolo) %>
+<%= label_tag(:boscolo, "Boscolo") %>
+    </label>
+  </div></li>
 
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:fairmont,true,checked=@fairmont) %>
+<%= label_tag(:fairmont, "Fairmont") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:intercontinental,true,checked=@intercontinental) %>
+<%= label_tag(:intercontinental, "Interncontinental") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:jwmarriott,true,checked=@jwmarriott) %>
+<%= label_tag(:jwmarriott, "JW Marriott") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:lemeridian,true,checked=@lemeridian) %>
+<%= label_tag(:lemeridian, "Le Merdien") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:mandarin,true,checked=@mandarin) %>
+<%= label_tag(:mandarin, "Mandarin Oriental") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:marriott,true,checked=@marriott) %>
+<%= label_tag(:marriott, "Marriott") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:melia,true,checked=@melia) %>
+<%= label_tag(:melia, "Melia") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:shangra,true,checked=@shangra) %>
+<%= label_tag(:shangra, "Shangri-La") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:sofitel,true,checked=@sofitel) %>
+<%= label_tag(:sofitel, "Sofitel") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:starwoodlux,true,checked=@starwoodlux) %>
+<%= label_tag(:starwoodlux, "Starwood Luxury Collection") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:swisshotel,true,checked=@swisshotel) %>
+<%= label_tag(:swisshotel, "Swissotel") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:langham,true,checked=@langham) %>
+<%= label_tag(:langham, "The Langham") %>
+    </label>
+  </div></li>
+
+
+<li><div class="checkbox">
+    <label>
+ <%= check_box_tag(:peninsula,true,checked=@peninsula) %>
+<%= label_tag(:peninsula, "The Peninsula") %>
+    </label>
+  </div></li>
 
 
 
@@ -609,6 +717,21 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
                                       <input value ="<%=@stregis%>" name="@stregis" id="@stregis" type="hidden">
                                       <input value ="<%=@westin%>" name="@westin" id="@westin" type="hidden">
 
+                                      <input value ="<%=@boscolo%>" name="@boscolo" id="@boscolo" type="hidden">
+                                      <input value ="<%=@fairmont%>" name="@fairmont" id="@fairmont" type="hidden">
+                                      <input value ="<%=@intercontinental%>" name="@intercontinental" id="@intercontinental" type="hidden">
+                                      <input value ="<%=@jwmarriott%>" name="@jwmarriott" id="@jwmarriott" type="hidden">
+                                      <input value ="<%=@lemeridian%>" name="@lemeridian" id="@lemeridian" type="hidden">
+                                      <input value ="<%=@mandarin%>" name="@mandarin" id="@mandarin" type="hidden">
+                                      <input value ="<%=@marriott%>" name="@marriott" id="@marriott" type="hidden">
+                                      <input value ="<%=@melia%>" name="@melia" id="@melia" type="hidden">
+                                      <input value ="<%=@shangra%>" name="@shangra" id="@shangra" type="hidden">
+                                      <input value ="<%=@sofitel%>" name="@sofitel" id="@sofitel" type="hidden">
+                                      <input value ="<%=@starwoodlux%>" name="@starwoodlux" id="@starwoodlux" type="hidden">
+                                      <input value ="<%=@swisshotel%>" name="@swisshotel" id="@swisshotel" type="hidden">
+                                      <input value ="<%=@langham%>" name="@langham" id="@langham" type="hidden">
+                                      <input value ="<%=@peninsula%>" name="@peninsula" id="@peninsula" type="hidden">
+
 
 
 
@@ -650,6 +773,20 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
     var sheraton = document.getElementById('sheraton').checked;
     var stregis = document.getElementById('stregis').checked;
     var westin = document.getElementById('westin').checked;
+    var boscolo = document.getElementById('boscolo').checked;
+    var fairmont = document.getElementById('fairmont').checked;
+    var intercontinental = document.getElementById('intercontinental').checked;
+    var jwmarriott = document.getElementById('jwmarriott').checked;
+    var lemeridian = document.getElementById('lemeridian').checked;
+    var mandarin = document.getElementById('mandarin').checked;
+    var marriott = document.getElementById('marriott').checked;
+    var melia = document.getElementById('melia').checked;
+    var shangra = document.getElementById('shangra').checked;
+    var sofitel = document.getElementById('sofitel').checked;
+    var starwoodlux = document.getElementById('starwoodlux').checked;
+    var swisshotel = document.getElementById('swisshotel').checked;
+    var langham = document.getElementById('langham').checked;
+    var peninsula = document.getElementById('peninsula').checked;
 
 
 
@@ -665,6 +802,20 @@ var brandstring =[]
     if(sheraton==1) {brandstring.push('130');}
     if(stregis==1) {brandstring.push('2045');}
     if(westin==1) {brandstring.push('152');}
+     if(boscolo==1) {brandstring.push('2533');}
+     if(fairmont==1) {brandstring.push('209');}
+     if(intercontinental==1) {brandstring.push('66');}
+     if(jwmarriott==1) {brandstring.push('2599');}
+     if(mandarin=1) {brandstring.push('91');}
+     if(marriott==1) {brandstring.push('86');}
+     if(melia==1) {brandstring.push('2433');}
+     if(shangra==1) {brandstring.push('129');}
+     if(sofitel==1) {brandstring.push('272');}
+     if(starwoodlux==1) {brandstring.push('320');}
+     if(swisshotel==1) {brandstring.push('132');}
+     if(langham==1) {brandstring.push('2585');}
+     if(peninsula==1) {brandstring.push('2025');}
+     if(lemeridian==1) {brandstring.push('87');}
 
 
     var url = "/essentials/filter";
@@ -674,7 +825,7 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula}
        });
  });
 
