--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -237,6 +237,20 @@ height: 6em;
     var sheraton = document.getElementById('sheraton').checked;
     var stregis = document.getElementById('stregis').checked;
     var westin = document.getElementById('westin').checked;
+    var boscolo = document.getElementById('boscolo').checked;
+    var fairmont = document.getElementById('fairmont').checked;
+    var intercontinental = document.getElementById('intercontinental').checked;
+    var jwmarriott = document.getElementById('jwmarriott').checked;
+    var lemeridian = document.getElementById('lemeridian').checked;
+    var mandarin = document.getElementById('mandarin').checked;
+    var marriott = document.getElementById('marriott').checked;
+    var melia = document.getElementById('melia').checked;
+    var shangra = document.getElementById('shangra').checked;
+    var sofitel = document.getElementById('sofitel').checked;
+    var starwoodlux = document.getElementById('starwoodlux').checked;
+    var swisshotel = document.getElementById('swisshotel').checked;
+    var langham = document.getElementById('langham').checked;
+    var peninsula = document.getElementById('peninsula').checked;
 
 
 
@@ -252,6 +266,20 @@ var brandstring =[]
     if(sheraton==1) {brandstring.push('130');}
     if(stregis==1) {brandstring.push('2045');}
     if(westin==1) {brandstring.push('152');}
+     if(boscolo==1) {brandstring.push('2533');}
+     if(fairmont==1) {brandstring.push('209');}
+     if(intercontinental==1) {brandstring.push('66');}
+     if(jwmarriott==1) {brandstring.push('2599');}
+     if(mandarin=1) {brandstring.push('91');}
+     if(marriott==1) {brandstring.push('86');}
+     if(melia==1) {brandstring.push('2433');}
+     if(shangra==1) {brandstring.push('129');}
+     if(sofitel==1) {brandstring.push('272');}
+     if(starwoodlux==1) {brandstring.push('320');}
+     if(swisshotel==1) {brandstring.push('132');}
+     if(langham==1) {brandstring.push('2585');}
+     if(peninsula==1) {brandstring.push('2025');}
+     if(lemeridian==1) {brandstring.push('87');}
 
 
     var url = "/essentials/filter";
@@ -261,12 +289,9 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula}
        });
  });
 
 
-
   </script>
-
-
