--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -297,6 +297,8 @@
 </div>
 
 
+
+
 <div id="page-content-wrapper">
   <div class="page-content">
    <div class="container">
@@ -808,7 +810,7 @@ var brandstring =[]
      if(fairmont==1) {brandstring.push('209');}
      if(intercontinental==1) {brandstring.push('66');}
      if(jwmarriott==1) {brandstring.push('2599');}
-     if(mandarin=1) {brandstring.push('91');}
+     if(mandarin==1) {brandstring.push('91');}
      if(marriott==1) {brandstring.push('86');}
      if(melia==1) {brandstring.push('2433');}
      if(shangra==1) {brandstring.push('129');}
