--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -270,7 +270,7 @@ var brandstring =[]
      if(fairmont==1) {brandstring.push('209');}
      if(intercontinental==1) {brandstring.push('66');}
      if(jwmarriott==1) {brandstring.push('2599');}
-     if(mandarin=1) {brandstring.push('91');}
+     if(mandarin==1) {brandstring.push('91');}
      if(marriott==1) {brandstring.push('86');}
      if(melia==1) {brandstring.push('2433');}
      if(shangra==1) {brandstring.push('129');}
