--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -36,7 +36,7 @@
 <%number = [['5',4],['10',9],['15',14],['25',24],['50',49]]%>
 
 <%= label_tag(:filterresults, "Number of Results") %>
-<%= select_tag(:filterresults,options_for_select(number,@filterresults))%>
+<%= select_tag(:filterresults,options_for_select(number,[@filterresults]))%>
 
 <div></div>
 <%= label_tag(:pricebox, "Price Per Night") %>
