--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -801,8 +801,8 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 <%noresults=0%>
 <%end%>
 
-  <div id="fade" class="fade"></div>
-        <div id="modal" class="modal">
+  <div id="fade"></div>
+        <div id="modal">
             <img id="loader" src="/assets/ajax-loader.gif" />
         </div>
 
@@ -825,7 +825,7 @@ function closeModal() {
 <script>
   $("#filters").change(function(){
 
-openModal();
+
 
     var checkin = document.getElementById('checkin').value;
     var numresults = document.getElementById('filterresults').value;
@@ -903,8 +903,11 @@ var brandstring =[]
       url: url,
       dataType:'script',
       data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula},
-        success: function(data){
-            $("#fade").modal("close");
+
+
+success: function(data){
+          closeModal()
+
          }
 
 
