--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,39 +56,28 @@
 
 .panel-heading{background-color:white;}
 
-
-#fade {
-    display: none;
-    position:absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: #ababab;
-    z-index: 1001;
-    -moz-opacity: 0.8;
-    opacity: .70;
-    filter: alpha(opacity=80);
+.modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 )
+                url('/assets/ajax-loader.gif')
+                50% 50%
+                no-repeat;
 }
 
-#modal {
-    display: none;
-    position: absolute;
-    top: 45%;
-    left: 45%;
-    width: 64px;
-    height: 64px;
-    padding:30px 15px 0px;
-    border: 3px solid #ababab;
-    box-shadow:1px 1px 10px #ababab;
-    border-radius:20px;
-    background-color: white;
-    z-index: 1002;
-    text-align:center;
-    overflow: auto;
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading {
+    overflow: hidden;
 }
 
-#results {
-    font-size:1.25em;
-    color:red
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .modal {
+    display: block;
 }
