--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -801,30 +801,11 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 <%noresults=0%>
 <%end%>
 
-  <div id="fade"></div>
-        <div id="modal">
-            <img id="loader" src="/assets/ajax-loader.gif" />
-        </div>
-
-
-
-<script>
-function openModal() {
-        document.getElementById('modal').style.display = 'block';
-        document.getElementById('fade').style.display = 'block';
-}
-
-function closeModal() {
-    document.getElementById('modal').style.display = 'none';
-    document.getElementById('fade').style.display = 'none';
-}
-
-        </script>
+<div class="modal"><!-- Place at bottom of page --></div>
 
 
 <script>
   $("#filters").change(function(){
-
 
 
     var checkin = document.getElementById('checkin').value;
@@ -902,19 +883,17 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula},
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula}
+    });
+});
 
 
-success: function(data){
-          closeModal()
+$body = $("body");
 
-         }
-
-
-
-       });
-
- });
+$(document).on({
+    ajaxStart: function() { $body.addClass("loading");    },
+     ajaxStop: function() { $body.removeClass("loading"); }
+});
 
 
 
