--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,7 +56,7 @@
 
 .panel-heading{background-color:white;}
 
-.modal {
+.modal2 {
     display:    none;
     position:   fixed;
     z-index:    1000;
@@ -78,6 +78,6 @@ body.loading {
 
 /* Anytime the body has the loading class, our
    modal element will be visible */
-body.loading .modal {
+body.loading .modal2 {
     display: block;
 }
