--- a/app/views/essentials/_accordianload.html.erb
+++ b/app/views/essentials/_accordianload.html.erb
@@ -801,7 +801,7 @@ zebra| zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"][
 <%noresults=0%>
 <%end%>
 
-<div class="modal"><!-- Place at bottom of page --></div>
+<div class="modal2"><!-- Place at bottom of page --></div>
 
 
 <script>
